--- a/main.html
+++ b/main.html
@@ -142,7 +142,7 @@
         <img src="gifs/pink-heart.gif" 
         class="top-character" alt="Персонаж" style="width: 240px; top: -170px;">
 
-        <h1>С уже пошедшим днём рождения ! </h1>
+        <h1>С уже прошедшим днём рождения ! </h1>
         
 
         <div class="extra-text">
@@ -156,8 +156,8 @@
             Очень важный текст <br>
             Для отвлечения внимания.
             <br><br><br>
-            Мы нечасто напоминаем тебе, не очень нравится об этом говорить, но мы тебя любим! И ещё запоздало решили на день рождения подарить тебе эту щетку, которую хрен купишь и
-            про которую ты угадала. Надеюсь тебе подойдет и еще рз, с прошедшим днем рождения!
+            Мы нечасто напоминаем тебе, но мы тебя очень любим! И ещё запоздало решили на день рождения подарить тебе эту щетку, которую хрен купишь и
+            про которую ты угадала. Надеюсь тебе подойдет и еще раз, с прошедшим днем рождения!
         </div>
          <div class="extra-text">
             ❤️
